added  the following keys (describing move/copy multiple issues) MovingIssuesP2, MovingIssuesP2S2, MovingIssuesP2S3, MovingIssuesP2S5, MovingIssuesP3, MovingIssuesP3S2 Issue# 17919 reviewed by tberry

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1569,6 +1569,15 @@ MovingIssuesP1S2=To use the Copy/move functionality, you must have permission to
 MovingIssuesP1S3=issues in the destination module.
 MovingIssuesP1S4=You will be presented with an attribute mapping functionality to reconcile any attributes that have values in the source issue but do not exist in the destination module or issue type. Selecting the checkbox next to the attribute will copy or move the attribute into a comment.
 InOriginalModule=in the original module.
+MovingIssuesP2=To move or copy multiple issues at once, you must first conduct a query that will return the issues you wish to move or copy. See 
+MovingIssuesP2S2=for help on building queries. You can move/copy all of the resulting issues or select a subset to be moved or copied. To move or copy all resulting issues, select
+MovingIssuesP2S3=from the
+MovingIssuesP2S4=dropdown box. To move or copy a subset of the resulting issues, select the issues you wish to copy or move by clicking on the checkbox next to each issue and select
+MovingIssuesP2S5=dropdown box.
+MovingIssuesP3=Next, you must select the destination. The
+MovingIssuesP3S2=table includes a list of available modules each with a dropdown box containing all available issue types. Select the desired issue type for the module to which you wish to move or copy the selected issues and click the
+
+
 
 ## UserIssues
 IssueAttributes= Issue attributes
