edited text for UserQuery.vm to include the My issues query option affected keys: UQP7, UQP8, UQP10, UQP11, UQP12, UQP20, UQP21
Issue 17925
reviewed by tberry

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1577,8 +1577,6 @@ MovingIssuesP2S5=dropdown box.
 MovingIssuesP3=Next, you must select the destination. The
 MovingIssuesP3S2=table includes a list of available modules each with a dropdown box containing all available issue types. Select the desired issue type for the module to which you wish to move or copy the selected issues and click the
 
-
-
 ## UserIssues
 IssueAttributes= Issue attributes
 IssueEntryScreen=Issue entry screen
@@ -1705,13 +1703,12 @@ UQP3=Know attribute values for issue: use advanced query
 UQP4=Know approximate information about issue: use custom query
 UQP5=Already defined search parameters: use saved queries
 UQP6=For ease of use, frequently used queries can be saved. Use the left navigation link or the query bar to access saved queries. 
-UQP7=The query bar contains links to frequently used search functionality.
-UQP8S1=If you have any saved queries, a drop down box will appear first on this bar. Each of your saved queries appears in this box. You can select the saved query you need and click the 
-button=button
+UQP7=The query bar provides quick access to frequently used search functionality.
+UQP8S1=If you have any saved queries, they will appear in the drop down box on this bar. 
 UQP9=form allows you to search the database for a specific issue ID.
-UQP10=link allows you to specify detailed search criteria.
-UQP11=link is a text string search feature
-UQP12=link will run the last query or any saved query you've set as a default
+UQP10=allows you to specify detailed search criteria.
+UQP11=is a text string search feature.
+UQP12=will run the last query or any saved query you have set as a default.
 UQP13S1=To access a specific issue enter the issue number in the search form and click the button. If the ID you requested is not found an error message will appear and you can enter a different ID.
 UQP13S2=button. If the ID you requested is not found an error message will appear and you can enter a different ID.
 UQP14=Accessing issues across projects requires the following information:
@@ -1721,7 +1718,9 @@ UQP17=issue number
 UQP18S1=For instance, jdoe is in the games (gam) project and wants to view an issue from the interface (int) project. Jdoe can enter INT1 and click the 
 UQP18S2=button to view the first issue in the Interface project.
 UQP19=If you do not have permission to view issues in the target project you will receive an error message. Likewise, if you enter an invalid project ID or issue number an error message will be generated.
-UQP20=link explains the syntax used in a text query
+UQP20=explains the syntax used in a text query.
+UQP21=generates a list of all issues with which you are associated.
+
 
 ##UserQueryText
 UQT1=Simple Text Searches
