* src/i18n/ScarabBundle_en_US.properties   UserSearchResults: Changed to more closely resemble the   IssueListCount resource used on IssueList.vm.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -823,7 +823,7 @@ ShowInTopNav=Show in top nav (if more than one is chosen)
 NoModulesToEdit=Sorry, no modules to edit.
 NoModuleEditPermission=It is not possible to create a new module because you do not have module edit permission in any other modules.
 PermissionList=Permission list
-UserSearchResults=Search results - {0}
+UserSearchResults=Search results (Number of users: {0})
 NoUsersFound=There are no users matching the specified criteria.
 EnterSearchCriteria=Enter search criteria
 LoginName=Login name
