AssociatingUsersP2S3: Added comment that filters are case-sensitive
Issue 17217
reviewed by tberry

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1555,7 +1555,7 @@ AssociatingUsersP1=The administrator may have defined several types of user attr
 AssociatingUsersP2=All user association tasks are performed on the 
 AssociatingUsersP2S1=screen. To access this screen either use the 
 AssociatingUsersP2S2=button on the view issue page or search for a group of issues and use the 
-AssociatingUsersP2S3=button. On the Assign screen you will see a list of users currently associated with the issue, their email address and the type of association and a User section which allows you to add users to the issue. You can filter the list of users using the filter form. You can search for users by full name or email address.
+AssociatingUsersP2S3=button. On the Assign screen you will see a list of users currently associated with the issue, their email address and the type of association and a User section which allows you to add users to the issue. You can filter the list of users using the filter form. The filter form is case-senstitive. You can search for users by full name or email address.
 AssociatingUsersP3Head=associating a user:
 AssociatingUsersP3=Once you have narrowed the list of users to select from you can select an association type for the drop down box next to the users name. Use the check box to add multiple users at the same time. Once you have selected your users and set their association type use the 
 AssociatingUsersP4Head=removing an associated user:
