Nav14, Nav15: updated text to reflect the new functionality allowing results to be exported as .xls
Issue 17920
reviewed by tberry

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1410,8 +1410,8 @@ NavP11S2=button to render the selection.
 NavP12=Each attribute in an entry form displays all available options, from which you can select one or more. 
 NavP13Head=Results and selection pages
 NavP13=Results screens appear after you have activated a request, like a query, a report, etc. Each results screen provides a list of items with some descriptive information.
-NavP14=Many results screens allow you to perform actions on the items that appear. Under the items you will find a set of buttons linked to actions that can be performed. There may be two sets of buttons. The first set will affect only those items you select using the checkboxes. If a second set appears, they will perform actions on all items in the list.
-NavP15=Below the action buttons you may find links to additional actions. These links allow you to affect the layout of results.
+NavP14=Many results screens allow you to perform actions on the items that appear. Under the items you will find a set of dropdown boxes containing actions that can be performed. The first box allows to export the results in the selected format. The available formats are Excel (.xls) and tab separated values. Once you select the export format from the dropdown box, the results will appear in the browser window in the format selected. You can then save the results locally.
+NavP15=The second box allows you to perform specific actions on all or a selected subset of the results. The available actions are View, Assign, Copy, and Move. 
 NavP16Head=Sort order  
 NavP16=Items are initially in ascending order by their ID. To sort by an attribute, click the title of the attribute. The sort will change to ascending by that attribute. Clicking the arrow beside the attribute name will provide a descending sort. 
 NavP17=Many screens are customizable. You can add to or remove the attributes that appear on your screen by clicking on the add/remove attributes from view link. Use the check boxes to show or hide attributes. Add a check to the items you would like to appear on your screen. Use this screen to determine the order of the columns by using the "Columnar sequence" field.
