* src/i18n/ScarabBundle_en_US.properties   ExportResultsTo: Change ellipsis to colon, as the former offers the   navigational clue that further action will be required (e.g. a   second screen to carry out the operation)..
Issue: PCN18465
Submitted by: John McNally
Reviewed by: Daniel Rall

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -475,7 +475,7 @@ DidNotCopyAttributesFromArtifact=The following attributes and values from artifa
 SelectIssueToMove=Please select an issue to move.
 
 ##IssueList
-ExportResultsTo=Export results to...
+ExportResultsTo=Export results to:
 ForFollowingModulesIssueTypes={0} for the following modules and/or issue types
 ForRModuleIssueType={0} for {1}
 NoMatchingIssues=There are no matching issues. 
