* Approval.java: do not allow an admin to concurrently approve or reject an item at the same time as another admin. * ScarabBundle_en_US.properties: add resources "ItemAlreadyApproved" and "ItemAlread yRejected" Issue number:  17413 Reviewed by:   venkat

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -734,6 +734,8 @@ GlobalAttributeScreen=On this screen, one can modify system wide Attribute infor
 GlobalIssueTypeScreen=This page is for selecting an Issue type to edit which is defined in a global scope.
 ModifyUserAttributes=On this screen, one can modify system wide user Attribute information.
 NoItemsToApprove=There are no items to approve.
+ItemAlreadyApproved=Item "{0}" has already been approved by another user.
+ItemAlreadyRejected=Item "{0}" has already been rejected by another user.
 AddPermission=Add permissions
 Permission=Permission
 AddRole=Add role
