* src/i18n/ScarabBundle_en_US.properties   Added key EmailLinkError which will be used in the event the   EmailLinkFactory cannot instantiate the configured link tool.
* src/java/org/tigris/scarab/util/Email.java
  getEmail: Use factory to create the link tool.

* src/java/org/tigris/scarab/util/EmailLink.java
  Add no-arg ctor so that subclasses can be instantiated via
  Class.newInstance().

* src/java/org/tigris/scarab/util/EmailLinkFactory.java
  Factory to create EmailLink's or a descendant which can be
  configured via property file.


Issue: PCN18457
Submitted by: John McNally
Reviewed by: Daniel Rall

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1262,6 +1262,9 @@ NewTemplateRequiresApproval=New template requires approval
 NoIssueSummaryAvailable=No summary is available
 IssueCreated=Issue created
 
+# EmailLinkFactory
+EmailLinkError=ERROR! Link is unavailable, please notify an administrator.
+
 ## ***********************************************************************
 ## Intake
 ## ***********************************************************************
