* src/i18n/ScarabBundle_en_US.properties   DefineHeaderSelectionOptionsAndHeadingSummaryInstructions: A new   resource which is a combination of a couple of older resources to   facilitate easier translation.
  DefineHeaderInstructions, ToSetThe: Merged into new
  DefineHeaderSelectionOptionsAndHeadingSummaryInstructions resource.

* src/templates/screens/reports/AxisConfiguration.vm
  Used new arrangement of text resources.


Issue: PCN18524
Submitted by: Ed Korthof
Reviewed by: Daniel Rall

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -707,8 +707,7 @@ SavedReportsList=saved reports list
 ReportInfo=Report information
 SelectedUsers=Selected users
 ClickHereReportMessage=<a href="#add">Click here</a> to add users to this reports row content
-DefineHeaderInstructions=Select a heading you wish to modify and click the "{0}" button. Then, 
-ToSetThe=to set the
+DefineHeaderSelectionOptionsAndHeadingSummaryInstructions=Select a heading you wish to modify and click the "{0}" button. Then, "{1}" to set the {2}.
 
 ReportUpdatedDoMore=Report was updated.  You can continue editing this heading possibly combining the options into groups, add or modify other heading levels, or edit the other axis.
 ReportUpdatedDoMoreOrCalculate=Report was updated, you may now calculate the report results.  Or you can continue editing this heading possibly combining the options into groups, add or modify other heading levels, or edit the other axis.
