--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -10,8 +10,11 @@
 ###############################################################################
 ### JavaBatchCompiler messages.
 
-### compiler version id
+### compiler 
+compiler.name = Eclipse Java Compiler
 compiler.version = 0.355
+compiler.copyright = Copyright IBM Corp 2000, 2003. All rights reserved.
+
 ### scanning
 scanning.start = Collecting source files inside {0}
 
@@ -51,7 +54,6 @@ configure.incompatibleComplianceForTarget11 = ''1.1'' target mode requires ''-1.
 configure.repetition = repetition must be a positive integer: {0}
 configure.directoryNotExist = directory does not exist: {0}
 configure.IOError = i/o error : unable to retrieve .JAVA files in directory: {0}
-configure.version = Eclipse Java Compiler {0}, Copyright IBM Corp 2000-2003. All rights reserved.
 configure.noClasspath = no classpath defined, using default directory instead
 configure.incorrectClasspath = incorrect classpath: {0}
 configure.invalidexpansionargumentname = expansion argument file {0} doesn't exist or cannot be read
@@ -75,8 +77,11 @@ unit.missing = File {0} is missing
 output.noClassFileCreated = No .class file created for file named {0} because of an IOException.
 
 ### miscellaneous
-misc.usage = Eclipse Java Compiler {0}\n\
-		Copyright IBM Corp 2000, 2003. All rights reserved.\n\n\
+  ### {0=compiler.name} {1=compiler.version}, {2=compiler.copyright}
+misc.version = {0} {1}, {2}
+  ### {0=compiler.name} {1=compiler.version}, {2=compiler.copyright}
+misc.usage = {0} {1}\n\
+		{2}\n\n\
 		Usage: <options> <source files | directories>\n\n\
 		where options include:\n\
 		-help				display this help message\n\
