added PaginatePrevious and PaginateNext keys to make the pagination l10n more consistent.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -183,6 +183,8 @@ Refresh=Refresh
 Done=Done
 Save=Save
 
+PaginatePrevious=&laquo; previous
+PaginateNext=&raquo; next
 Next=Next
 ClearForm=Clear form
 CopySelected=Copy selected
