* src/i18n/ScarabBundle_en_US.properties   ContinueEntry: Replaced BypassDuplicates with this resource to   better reflect the nature of the button.
* src/templates/screens/entry/Wizard2.vm
  Used the new ContinueEntry text resource for the label on the button
  used to ignore the duplicate check.  When there is only a single
  duplicate found, removed the worthless Select column and its
  corresponding radio button.

* src/java/org/tigris/scarab/actions/ReportIssue.java
  Show the CommentAdded resource as an info message even when only a
  single issue is being commented upon.


Issue: PCN17289
Submitted by: Elicia David and Daniel Rall
Reviewed by: Daniel Rall

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -223,7 +223,7 @@ UpdateOptions=Update options
 CopyIssue=Copy issue
 MoveIssue=Move issue
 EditComment=Edit comment(s)
-BypassDuplicates=Bypass duplicates
+ContinueEntry=Continue entry
 SubmitIssue=Submit issue
 AddSelected=Add selected
 RemoveSelected=Remove selected
