* scarab/src/i18n/ScarabBundle_en_US.properties   Added ParenDisabled=(disabled) resource.
* scarab/src/templates/screens/AssignIssue.vm
  Show the current value for a user with the disabled qualifier.  Also
  removed a second copy of the #assignIssue() macro which was identical
  to the first (until this change).

* scarab/src/templates/viewIssue/ViewIssueTab2.vm
  Use the ParenDisabled resource.

Issue: PCN16492
Submitted by: John McNally
Reviewed by: Daniel Rall

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -301,6 +301,7 @@ StaticIssueInfo=Static issue info
 ReasonForChange=Reason for change
 EnterReason=This text will be added to this issue as a Reason for change when you select <strong>Done</strong>
 AssociatedPersonnel=Personnel associated with issue
+ParenDisabled=(disabled)
 Comments=Comments
 EnterComment=Enter new comment
 NoComments=There are no comments for this issue.
