Added the following keys for new help on using XML Import/export. Also cleaned up some excess whitespace. XMLImportExport XMLImportExportP1 ExportingIssues ExportingIssuesP1 ExportingIssuesP2 ExportingIssuesP3 ExportingIssuesP3B1 ExportingIssuesP3B2 ExportingIssuesP3B3 ImportingIssues ImportingIssuesP1 ImportingIssuesP2 ImportingIssuesP2B1 ImportingIssuesP2B2 ImportingIssuesP2B3 ImportingIssuesP3 ImportingIssuesP4 ImportingIssuesP4B1 Issue: 17923 Reviewed by: tberry

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1588,6 +1588,7 @@ MovingIssuesP3S2=table includes a list of available modules each with a dropdown
 ## UserIssues
 IssueAttributes= Issue attributes
 IssueEntryScreen=Issue entry screen
+XMLImportExport=Using XML Import/Export
 OverviewPara=Scarab has a very dynamic issue management strategy. Committing, tracking and modifying issues is a simple process. Scarab has the following issue management features:
 Relationships=Relationships: 
 RelationshipsDef=Scarab can track relationships between issues. Dependencies between issues can be flagged and tracked through either the issue entry process or while reviewing one or multiple issues. 
@@ -1616,6 +1617,23 @@ StartPage=Start page
 ReturnToHome=Return to home
 AfterSubmit=After submit
 IssueReadOnly=This issue is read-only because its issue type has been marked as no longer active.
+XMLImportExportP1=You can use the XML Import/Export feature to migrate your existing issue database into a new Scarab database. You can also use this feature to synchronize your older or external tracking component database with the Scarab database. This allows you to continue using the older tracking component until your module's members are comfortable with Scarab. Once the import is completed, you can treat the imported issues just like any other Scarab issue.
+ExportingIssues=Exporting issues
+ExportingIssuesP1=This feature exports issues as XML which you can either view in the browser window or save as a downloadable file. You can use the exported file  for a variety of  purposes, such as archiving issues or synchronizing other tracking databases with the Scarab database. Issues may be exported from the current module only. You must have the Project Issue Tracking - Query permission to use the XML export issues feature.
+ExportingIssuesP2=You can export issues singly or in batches. When exporting batches of issues, you can include issues by including their IDs in a comma-separated list or a range of IDs. Specifying a comma-separated list exports only the issues specified in the list. For example, 10, 20, 30, 50 will export only issues 10, 20, 30 and 50. Specifying a range of issue IDs exports all issues in the range.  For example, 1-50 will export all issues with IDs from 1 to 50. You can specify issues to export using a combination of comma-separated list and ranges.  For example: 1-5, 10, 20 will export issues 1 through 5 and issues 10 and 20.
+ExportingIssuesP3=To XML export issues:
+ExportingIssuesP3B1=link on the navigation bar.
+ExportingIssuesP3B2=Enter the issue IDs to be exported in the <strong>Issues</strong> field.
+ExportingIssuesP3B3=Select your export destination by clicking the appropriate radio button in the <strong>Options</strong> field.
+ImportingIssues=Importing issues
+ImportingIssuesP1=This feature imports issue data  from  XML files. The imported issues are  treated as  new issues in the Scarab database. You must have the Project Issue Tracking - Submit permission to use the XML import issues feature.
+ImportingIssuesP2=Scarab accepts only those XML files that follow the Scarab DTD. The  following elements in the &quot;module&quot; section of the XML file  must match the settings for the current module:
+ImportingIssuesP2B1=this is the domain in which your module exists. If the URL for your module is module.domain.com, the domain element in the XML file should look like <code>&lt;domain&gt;domain.com&lt;/domain&gt;</code>.
+ImportingIssuesP2B2=this is the module name. If the URL for your module is module.domain.com, the name element should look like <code>&lt;name&gt;module&lt;/name&gt;</code>.
+ImportingIssuesP2B3=this is the Issue code for your module. If the issue code for your module is set to SC, the code element should look like <code>&lt;code&gt;SC&lt;/code&gt;</code>.
+ImportingIssuesP3=The module to which you are importing must contain all of the  usernames, issue  types, attributes, and  attribute options referenced in the XML file. On a successful import, Scarab creates a new issue for each issue in the XML file and  assigns an issue ID to each. You can then treat these new issues as you would any other issue in the database.
+ImportingIssuesP4=To XML import issues:
+ImportingIssuesP4B1=Browse and select the file or enter the file name to import.
 
 ## UserReports
 ReportsOverview=Reports: overview
@@ -1632,7 +1650,6 @@ ReportsP6S1=The primary filter attribute (PFA) defines the subset of issues from
 ReportsP6S2=If you have a several similar attributes defined in your PFA you may wish to display an average of the options.
 ReportsP7Head=Display criteria
 ReportsP7=The final step in defining a report is to set the display options. Use this area to define the row and column content.
-
 
 ## UserQuerySaved
 AdvancedQueries=Advanced queries
