* scarab/src/i18n/ScarabBundle_en_US.properties    (NewID): Changed from 'Scarab ID' to 'Imported ID'. Issue number: pcn18599 Obtained from: Submitted by: Reviewed by:  kevin@collab.net

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -886,7 +886,7 @@ ProcessingErrors=Processing errors
 MissingXML=XML is missing or too small to process
 Unauthorized=The account is not authorized to perform this operation
 OldID=Original ID
-NewID=Scarab ID
+NewID=Imported ID
 
 ## Navigation
 IssueTrackingHome=Issue tracking home
