--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -12,7 +12,7 @@
 
 ### compiler 
 compiler.name = Eclipse Java Compiler
-compiler.version = 0.357
+compiler.version = 0.358
 compiler.copyright = Copyright IBM Corp 2000, 2003. All rights reserved.
 
 ### scanning
@@ -77,60 +77,74 @@ unit.missing = File {0} is missing
 output.noClassFileCreated = No .class file created for file named {0} because of an IOException.
 
 ### miscellaneous
-  ### {0=compiler.name} {1=compiler.version}, {2=compiler.copyright}
-misc.version = {0} {1}, {2}
-  ### {0=compiler.name} {1=compiler.version}, {2=compiler.copyright}
-misc.usage = {0} {1}\n\
-		{2}\n\n\
-		Usage: <options> <source files | directories>\n\n\
-		where options include:\n\
-		-help				display this help message\n\
-		-version			only display compiler version number\n\
-		-classpath or -cp			<dir 1>;<dir 2>;...;<dir P>\n\
-		-bootclasspath		<dir 1>;<dir 2>;...;<dir P>\n\
-		-d <dir>			destination directory (if omitted, no directory is created)\n\
-		   \t-d none			no classfile is generated\n\
-		-target <ver>		set classfile target (1.1 to 1.4, default is ''1.1'')\n\
-		-1.3 				use 1.3 compliance level (default)\n\
-		-1.4 				use 1.4 compliance level\n\
-		-source <ver>		set source level (1.3 or 1.4, default matches compliance level)\n\
-		-nowarn				no warning (equivalent to ''-warn:none'')\n\
-		-warn: <level>		set warning level (e.g. ''-warn:unusedLocals,deprecation'')\n\
-		\tallDeprecation			 deprecation (including in deprecated code)\n\
-		\tassertIdentifier		 ''assert'' used as identifier\n\
-		\tconstructorName			 method with constructor name \t\t\t\t  (default) \n\
-		\tdeprecation				 deprecation (outside deprecated code) \t\t  (default)\n\
-		\tmaskedCatchBlock		 hidden catch block \t\t\t\t\t\t  (default)\n\
-		\tnls						 string literal lacking non-nls tag //$NON-NLS-<n>$\n\
-		\tpackageDefaultMethod	 attempt to override package-default method   (default)\n\
-		\tunusedArgument			 unused method argument (never read)\n\
-		\tunusedImport			 unused import declaration \t\t\t\t\t  (default)\n\
-		\tunusedLocal				 unused local variable (never read)\n\
-		\tunusedPrivate			 unused private member declaration\n\
-		\tstaticReceiver			 non-static reference to static member \t\t  (default)\n\
-		\tnoEffectAssign			 assignment without effect \t\t\t\t\t  (default)\n\
-		\tconditionAssign			 possible accidental boolean assignment\n\
-		\tsyntheticAccess			 synthetic access for innerclass\n\
-		\tinterfaceNonInherited	 interface non-inherited method compatibility (default)\n\
-		\tlocalHiding				 local variable hiding another variable\n\
-		\tfieldHiding				 field hiding another variable\n\
-		\tspecialParamHiding	 	 constructor or setter parameter hiding another field\n\
-		\tnoImplicitStringConversion char[] in String concat\t\t\t\t\t  (default)\n\
-		\ttasks(<tag1>|...|<tagN>) tasks identified by tags inside comments\n\
-		-deprecation		equivalent to ''-warn:deprecation'' (default)\n\
-		-g[:<level>]		debug attributes level (default ''-g:lines,source'')\n\
-			\t-g				all debug info (''-g:lines,vars,source'')\n\
-			\t-g:none			no debug info\n\
-			\t-g:[lines,vars,source]	selective debug info\n\
-		-preserveAllLocals	preserve unused local vars for debug purpose (default is optimize out)\n\
-		-noImportError		no errors for unresolved imports (default is error)\n\
-		-encoding <enc>		specify a different default source encoding format (custom encoding can be specified on\n\
-		\t\t\t\t\ta per file basis by adding suffix ''[<enc>]'' to file/folder names\n\
-		-log <filename>		specify a log file\n\
-		-proceedOnError		keep compiling when error, dumping class files with problem methods (default is off)\n\
-		-verbose			print accessed/processed compilation units\n\
-		-referenceInfo		compute reference info\n\
-		-progress			show progress (only in -log mode)\n\
-		-time				display speed information \n\
-		-noExit				do not call System.exit(n) at end of compilation (n=0 if no error)\n\
-		-repeat <n>			repeat compilation process <n> times (perf analysis)\n
+misc.version = {compiler.name} {compiler.version}, {compiler.copyright}
+misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
+\ \n\
+\Usage: <options> <source files | directories>\n\
+\ If a directories are specified, then their source contents are compiled.\n\
+\ Possible options are listed below. Those enabled by default are prefixed with ''+''\n\
+\ \n\
+\ Classpath options:\n\
+\    -cp -classpath <directories and zip/jar files separated by ;>\n\
+\                       specify location for application classes and sources\n\
+\    -bootclasspath <directories and zip/jar files separated by ;>\n\
+\                       specify location for system classes\n\
+\    -d <dir>           destination directory (if omitted, no directory is created)\n\
+\    -d none            generate no .class files\n\
+\    -encoding <enc>    specify custom encoding for all sources. Each file/directory can override it\n\
+\                       when suffixed with ''[''<enc>'']'' (e.g. X.java[utf8])\n\
+\ \n\
+\ Compliance options:\n\
+\    -1.3             + use 1.3 compliance level\n\
+\    -1.4               use 1.4 compliance level\n\
+\    -source <version>  set source level (1.3 or 1.4, default matches compliance level)\n\
+\    -target <version>  set classfile target (1.1 to 1.4, default matches compliance level)\n\
+\ \n\
+\ Error/Warning options:\n\
+\    -deprecation     + deprecation outside deprecated code\n\
+\    -noImportError     no errors for unresolved imports\n\
+\    -nowarn            disable all warnings\n\
+\    -warn: <warnings separated by ,> where warnings include:\n\
+\      none                 disable all warnings\n\
+\      allDeprecation       deprecation including inside deprecated code\n\
+\      assertIdentifier     ''assert'' used as identifier\n\
+\      conditionAssign      possible accidental boolean assignment\n\
+\      constructorName    + method with constructor name\n\
+\      deprecation        + deprecation outside deprecated code\n\
+\      fieldHiding          field hiding another variable\n\
+\      intfNonInherited   + interface non-inherited method compatibility\n\
+\      localHiding          local variable hiding another variable\n\
+\      maskedCatchBlock   + hidden catch block\n\
+\      nls                  string literal lacking non-nls tag //$NON-NLS-<n>$\n\
+\      noEffectAssign     + assignment without effect\n\
+\      charConcat         + char[] in String concat\n\
+\      pkgDefaultMethod   + attempt to override package-default method\n\
+\      unusedArgument       unread method argument\n\
+\      unusedImport       + unused import declaration\n\
+\      unusedLocal          unread local variable\n\
+\      unusedPrivate        unused private member declaration\n\
+\      specialParamHiding   constructor or setter parameter hiding another field\n\
+\      staticReceiver     + non-static reference to static member\n\
+\      syntheticAccess      synthetic access for innerclass\n\
+\      tasks(<tags separated by |>) tasks identified by tags inside comments\n\
+\ \n\
+\ Debug options:\n\
+\    -g[:lines,vars,source] custom debug info\n\
+\    -g:lines,source  + default debug info\n\
+\    -g                 all debug info\n\
+\    -g:none            no debug info\n\
+\    -preserveAllLocals preserve unused local vars for debug purpose\n\
+\ \n\
+\ Advanced options:\n\
+\    -log <filename>    log to a file\n\
+\    -proceedOnError    do not stop at first error, dumping class files with problem methods\n\
+\    -verbose           enable verbose output\n\
+\    -referenceInfo     compute reference info\n\
+\    -progress          show progress (only in -log mode)\n\
+\    -time              display speed information \n\
+\    -noExit            do not call System.exit(n) at end of compilation (n==0 if no error)\n\
+\    -repeat <n>        repeat compilation process <n> times for perf analysis\n\
+\ \n\
+\    -? -help           print this help message\n\
+\    -v -version        print compiler version\n\
+\    -showversion       print compiler version and continue\n
