* src/java/org/tigris/scarab/actions/admin/ArtifactTypeEdit.java   doDeletegroup(): Report to the user when there are no attribute   groups selected to delete.
* src/i18n/ScarabBundle_en_US.properties
  NoAttributeGroupSelected: New localization resource indicate that
  there were no attributre groups selected for removal.

Issue: PCN17852
Submitted by: irk@collab.net
Reviewed by: Daniel Rall

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1047,6 +1047,7 @@ ChangesResultDuplicateNames=Changes would result in duplicate names
 Duplicate=Duplicate
 GlobalIssueTypesDeleted=Global issue type(s) deleted.
 GlobalIssueTypesUnDeleted=Global issue type(s) undeleted.
+NoAttributeGroupSelected=No attribute group was selected for removal.
 NoIssueTypesSelected=No issue types were selected.
 CannotDeleteIssueTypesWithIssues=You cannot delete an issue type that has issues already associated with it.
 IssueTypeHasIssues=This issue type has issues associated with it.
