Issue number:  18952 Obtained from: Submitted by: Reviewed by:   csjank fixed confusing keys.  split sentence across two keys to accomodate localization of issue/artifact id.

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1635,6 +1635,7 @@ ImportingIssuesP2B3=this is the Issue code for your module. If the issue code fo
 ImportingIssuesP3=The module to which you are importing must contain all of the  usernames, issue  types, attributes, and  attribute options referenced in the XML file. On a successful import, Scarab creates a new issue for each issue in the XML file and  assigns an issue ID to each. You can then treat these new issues as you would any other issue in the database.
 ImportingIssuesP4=To XML import issues:
 ImportingIssuesP4B1=Browse and select the file or enter the file name to import.
+Button=button
 
 ## UserReports
 ReportsOverview=Reports: overview
@@ -1735,7 +1736,7 @@ UQP9=form allows you to search the database for a specific issue ID.
 UQP10=allows you to specify detailed search criteria.
 UQP11=is a text string search feature.
 UQP12=will run the last query or any saved query you have set as a default.
-UQP13S1=To access a specific issue enter the issue number in the search form and click the button. If the ID you requested is not found an error message will appear and you can enter a different ID.
+UQP13S1=To access a specific issue enter the issue number in the search form and click the 
 UQP13S2=button. If the ID you requested is not found an error message will appear and you can enter a different ID.
 UQP14=Accessing issues across projects requires the following information:
 UQP15=permission to view issues in the target project
