--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -81,7 +81,7 @@ misc.version = {compiler.name} {compiler.version}, {compiler.copyright}
 misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \ \n\
 \Usage: <options> <source files | directories>\n\
-\ If a directories are specified, then their source contents are compiled.\n\
+\ If directories are specified, then their source contents are compiled.\n\
 \ Possible options are listed below. Those enabled by default are prefixed with ''+''\n\
 \ \n\
 \ Classpath options:\n\
