*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -130,7 +130,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \ \n\
 \ Debug options:\n\
 \    -g[:lines,vars,source] custom debug info\n\
-\    -g:lines,source  + default debug info\n\
+\    -g:lines,source  + both line table and source debug info\n\
 \    -g                 all debug info\n\
 \    -g:none            no debug info\n\
 \    -preserveAllLocals preserve unused local vars for debug purpose\n\
