*** empty log message ***

--- a/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
+++ b/batch/org/eclipse/jdt/internal/compiler/batch/messages.properties
@@ -136,7 +136,7 @@ misc.usage = {compiler.name} {compiler.version}, {compiler.copyright}\n\
 \    -preserveAllLocals preserve unused local vars for debug purpose\n\
 \ \n\
 \ Advanced options:\n\
-\    -log <filename>    log to a file\n\
+\    -log <file>        log to a file\n\
 \    -proceedOnError    do not stop at first error, dumping class files with problem methods\n\
 \    -verbose           enable verbose output\n\
 \    -referenceInfo     compute reference info\n\
