Issue number:  18878 Obtained from: Submitted by: Reviewed by:   csjank fixed punctuation and fragmented sentence for userissues

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1393,16 +1393,17 @@ NavP1=interface is organized to allow access to all major functionality from any
 NavP2=Each screen provides the following navigational aids
 NavP3Head=The Left navigation bar:
 NavP3=The navigation bar is organized by issue type, then by function. To access functionality within a specific issue type, select the title of the issue type on the left navigation bar. The functionality available to that issue type will appear below the title. 
-NavP4Head=The Query bar
-NavP4=The query   bar provides access to the search tools. The issue ID box allows you   to access a specific issue number. The select query box provides access   to the Advanced and Custom query features. If you have any saved queries,   they will appear in the select query box.
-NavP5Head=Section titles
-NavP5=Most information screens are organized in tabular format. Each section is presented with an informative section header, describing the section and, often, providing general information about the section. Each column header acts as a link to change the sort order for that table. For the sort column, the title has an arrow indicating the direction of the sort: the default is ascending. To change the direction of the sort click on the arrow.
+NavP4Head=The Query bar:
+NavP4=The query bar provides access to the search tools. The issue ID box allows you   to access a specific issue number. The select query box provides access   to the Advanced and Custom query features. If you have any saved queries,   they will appear in the select query box.
+NavP5Head=Section titles:
+NavP5=Most information screens are organized in tabular format. Each section is presented with an informative section header, describing the section and, often, providing general information about the section. Column headers with arrows can be used to change the sort order for that table. For the sort column, the title has an arrow indicating the direction of the sort: the default is ascending. To change the direction of the sort click on the arrow.
 Buttons=Buttons:
-NavP6=indicate a set of actions that can be performed. Often you will find more than one set of buttons on a page. Buttons directly below a section will perform actions on the section only, if you have you may find an 
+Buttons1=Buttons
+NavP6=Are used to indicate a set of actions that can be performed. Often you will find more than one set of buttons on a page. Buttons directly below a section will perform actions on the section only, if you have you may find an 
 NavP6S2=Update Options
 NavP6S3=button beside an attribute selector in one section. This indicates that if you change the attribute clicking the button will change the options available to that attribute. 
 NavP7Head=Checkboxes:
-NavP7=used to select list items for modification.
+NavP7=Are used to select list items for modification.
 NavP8=In many cases, helpful information is included directly on the screens to clarify unusual operations. Error messages are provided in line to help identify where the error occurred and specific means for remedy.
 NavP9Head=Entry forms
 NavP9=Entry forms are easy to use. Default data points are indicated with * (astricks) beside the field title. Often you will find textual guidelines within the entry forms to help you through the form entry process.
@@ -1593,8 +1594,6 @@ XMLImportExport=Using XML Import/Export
 OverviewPara=Scarab has a very dynamic issue management strategy. Committing, tracking and modifying issues is a simple process. Scarab has the following issue management features:
 Relationships=Relationships: 
 RelationshipsDef=Scarab can track relationships between issues. Dependencies between issues can be flagged and tracked through either the issue entry process or while reviewing one or multiple issues. 
-Voting=Voting:
-VotingDef=if you find an issue that is similar to one you are tracking or have encountered, you can add a vote to the issue. 
 ChangeTracking=Change tracking:
 ChangeTrackingDef=All changes made along with information about the user who made the change, when the change was made and any comments committed along with the change are tracked with the issue. 
 CommentViewing=Comment viewing and editing:
@@ -1607,7 +1606,8 @@ IssueAttributesP1=Attributes are the common descriptors for issues. Attributes a
 IssueAttributesP2=Attributes can be organized in groups. If duplication checking is active, you enter a subset of attributes for the issue. This subset is used to check for duplicates in the database. After the duplication checking process is complete, you can enter values for the remaining attributes. 
 IssueAttributesP3=An issue type may have a set of required attributes. Values for the required attributes must be entered before committing the issue. Required attributes are identified by an asterisks (*) beside the name of the attribute.
 IssueAttributesP4=On many results pages you can change which attributes appear on your screen. For information on customizing your interface see
-IssueEntryScreenP1=After selecting your issue type and the Enter new link from the left navigation. At this point you can enter values for the available attributes. Each attribute will have either a drop down box with options to select from or a text entry form for you to enter text. All attributes with an asterisks (*) beside the title must have values before saving the issue.
+IssueEntryScreenP1=After selecting your issue type and the Enter new link from the left navigation you can enter values for the available attributes. Each attribute will have either a drop down box with options to select from or a text entry form for you to enter text. All attributes with an asterisks (*) beside the title must have values before saving the issue.
+
 IssueEntryScreenP2=If duplication tracking is active, entering an issue becomes a three step process. The first step is to define a subset of attributes that will be used to check for duplicates in the database once you have used the 
 IssueEntryScreenP2S2=button. The second step is to review all possible duplicates and determine what action to perform (see Duplicates for more information on duplicate management). The third step is to enter values for the remaining attributes.
 IssueEntryScreenP3=While you are entering the issue you can attach a relevant file using the  same form. Attaching a file helps you and others to easily share relevant information or patches. For more information on adding attachments see 
