Issue number:  18948 Obtained from: Submitted by: Reviewed by:   csjank added some keys, edited some punctuation

--- a/src/i18n/ScarabBundle_en_US.properties
+++ b/src/i18n/ScarabBundle_en_US.properties
@@ -1498,6 +1498,7 @@ IssueAttachments=Issue attachments
 HandlingDuplicates=Handling duplicates
 ReviewDuplicates=Reviewing duplicates
 CommentingOn=Commenting on like issues
+BypassDuplicates=Continue entry
 UsingTemplates=Using templates
 IssueEntryP1=Effective issue reports assist in the process of refining projects and reaching the ultimate goal of completion. A useful issue report normally has two qualities:
 IssueEntryP2Head=Reproducible.
@@ -1519,7 +1520,7 @@ IssueEntryP13=While creating the issue, use the textual fields to add as much sp
 IssueEntryP14Head=Adding supporting information
 IssueEntryP14=In the issue entry process you can add additional relevant information; you can include dependencies on other issues as well as attaching appropriate files (like patches, emails, etc.).
 IssueEntryP15Head=Setting dependencies: 
-IssueEntryP15=Issues often have dependencies on other issues. One issue may require a resolution from another before any work can be done. Two issues may have parallel resolutions and need to be tracked together, though they have no direct influence on one another
+IssueEntryP15=Issues often have dependencies on other issues. One issue may require a resolution from another before any work can be done. Two issues may have parallel resolutions and need to be tracked together, though they have no direct influence on one another.
 IssueEntryP16=There are three levels of dependencies within Scarab: blocking, duplicating and non-blocking. Blocking issues prevent the issue being blocked, from being resolved. The blocking issue must be addressed before the blocked issue can be resolved.
 IssueEntryP17=Sometimes duplicate issues may be entered and need to be tracked separately. Marking an issue as a duplicate allows users to track efforts on both issues. Duplicates may be in different modules or the same module.
 IssueEntryP18=Marking issues as non-blocking dependencies also allows users to simultaneously track efforts on two or more issues.
@@ -1532,7 +1533,7 @@ IssueEntryP20S4=button. You can repeat this process to add multiple files.
 IssueEntryP21Head=Handling Duplicates
 IssueEntryP22=If you have duplication checking active, Scarab will use a subset of attributes to check for possible duplicates in the database. If duplicates are found a report of similar issues will be presented with your issue listed at the top. Review the issues listed to determine if an existing issue covers the issue you are entering. You can do a number of things at this point:
 IssueEntryP23=Review individual issues by clicking on their ID. The full issue descriptionIssueEntry  will appear. 
-IssueEntryP24=Sort issues by each of the categories. Click on the name of the category to change the sort order
+IssueEntryP24=Sort issues by some of the categories. Click on the name of the category to change the sort order
 IssueEntryP25=Alter one or more issues at the same time. Click on the check box to the left of the issue IDs that you would like to manipulate. You can then enter a note in the
 IssueEntryP25S2=field and click the 
 IssueEntryP25S3=button to add a note to the comments section of all issues selected.
@@ -1548,7 +1549,7 @@ IssueEntryP29=The note box under the list of like issues allows you to add comme
 IssueEntryP29S2=box will be added to the 
 IssueEntryP29S3=section in the issue. To add comments, enter text in the
 IssueEntryP29S4=box and click the
-IssueEntryP29S5=button. Once your entry has been processed a message will appear at the top of the screen letting you know that hat your comment has been added.
+IssueEntryP29S5=button. Once your entry has been processed a message will appear at the top of the screen letting you know that your comment has been added.
 
 ## UserIssueModify
 ManagingInformation=Managing information
